# distributed-workloads

./: Makefile  go.mod
.github/workflows/: build-custom-ray-image.yml  build-push-image-release.yml
images/runtime/examples/ray-torch-cuda/: Dockerfile
images/universal/training/th-torch-cuda-py312/: Dockerfile  buildconfig.yaml  pyproject.toml  requirements.txt
tests/common/support/: namespace.go
tests/kfto/: kfto_sft_llm_test.go
tests/odh/: mnist_ray_test.go
tests/odh/resources/: custom_image.sh
tests/trainer/: environment.go  trainer_kueue_integration_test.go  trainer_kueue_upgrade_training_test.go  trainer_trainingruntime_upgrade_test.go  trainer_upgrade_sleep_test.go
