# CUDA Universal Image Python Dependencies
#
# To regenerate requirements.txt:
#   uv pip compile --python-platform=linux --python-version=3.12 \
#     --index-strategy=unsafe-best-match \
#     --index-url=https://console.redhat.com/api/pypi/public-rhai/rhoai/3.5/cuda13.0-ubi9/simple/ \
#     --override <(echo "tilelang==0.1.9") \
#     -o requirements.txt pyproject.toml

[project]
name = "th-torch-cuda-universal-image"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    # ===================================================================
    # ML/AI DEPENDENCIES (added on top of base image)
    # Base image deps are NOT listed here - pip install is additive
    # Strict AIPCC-only: all packages must be available in AIPCC index
    # ===================================================================
    
    # PyTorch with CUDA 13.0
    "torch==2.11.0",
    
    # Triton (GPU kernel compiler)
    "triton==3.6.0",
    
    # xformers (efficient transformers)
    "xformers==0.0.35",
    
    # ML Training and Inference Libraries
    "accelerate==1.14.0",
    "transformers==5.13.0",
    "peft==0.19.1",
    "datasets==5.0.0",
    
    # Core Dependencies
    "tqdm>=4.67.1",
    "pydantic>=2.11.7",
    "aiofiles==25.1.0",
    "deprecated>=1.2.18",
    "typer>=0.19.2",
    "protobuf>=3.20.0",
    "safetensors==0.8.0",
    "py-cpuinfo>=9.0.0",
    
    # Deep Learning Utilities
    "numba==0.65.0",
    "numpy>=2.0.0",
    "rich>=13.9.4",
    "tensorboard==2.20.0",
    "bitsandbytes==0.49.2",
    "liger-kernel==0.8.0",
    "einops==0.8.2",
    "kernels==0.15.2",
    
    # Tokenization
    "sentencepiece==0.2.1",
    "tokenizers==0.22.2",
    
    # Training Libraries
    "trl==1.6.0",
    "deepspeed==0.19.2",
    
    # HuggingFace
    "hf-xet==1.5.1",
    "huggingface-hub==1.22.0",
    "fsspec==2026.4.0",
    
    # MLOps
    "mlflow==3.14.0",
    
    # Storage
    "s3fs==2026.4.0",
    
    # Training Frameworks
    "training_hub[lora,cuda]==0.9.2",
    "instructlab-training==0.16.2",
    "rhai-innovation-mini-trainer==0.8.3",
    "unsloth==2026.6.9+rhaiv.2",
    "unsloth-zoo==2026.6.7+rhaiv.1",
    
    # Kubeflow SDK
    "kubeflow==0.3.0+rhaiv.3",
    "kubeflow_spark_api==2.4.0",
    "pyspark_connect==4.1.2",
    
    # Model Management
    "model_registry==0.3.10",
    
    # Flash Attention (pre-built wheel from AIPCC)
    "flash-attn==2.8.3.post1",
    
    # Mamba dependencies (pre-built wheels from AIPCC)
    "causal-conv1d==1.6.2.post1",
    "mamba-ssm==2.3.2.post1",
    
    # OpenPipe ART
    "openpipe-art==0.5.17",
    
    # Inference
    "vllm==0.21.0+rhaiv.8",
]

[tool.uv]
environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython'",
]
index-strategy = "unsafe-best-match"
index-url = "https://console.redhat.com/api/pypi/public-rhai/rhoai/3.5/cuda13.0-ubi9/simple/"
